--- a/meta-mender-c444/conf/layer.conf
+++ b/meta-mender-c444/conf/layer.conf
@@ -5,13 +5,13 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
             ${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "mender-imx"
-BBFILE_PATTERN_mender-imx := "^${LAYERDIR}"
-LAYERSERIES_COMPAT_mender-imx = "zeus"
+BBFILE_COLLECTIONS += "mender-c444"
+BBFILE_PATTERN_mender-c444 := "^${LAYERDIR}"
+LAYERSERIES_COMPAT_mender-c444 = "zeus"
 
 # This needs to be higher priority than meta-imx
 # We have to override the do_compile() function it provides for our newer
 # u-boot version.
-BBFILE_PRIORITY_mender-imx = "11"
+BBFILE_PRIORITY_mender-c444 = "11"
 
-LAYERDEPENDS_mender-imx = "mender freescale-layer fsl-bsp-release"
+LAYERDEPENDS_mender-c444 = "mender freescale-layer fsl-bsp-release"
