Added DM-Crypt & setup script
Signed-off-by: danie007 <danilselvan@gmail.com>

--- a/meta-c444-jas/recipes-kernel/linux/linux-imx/0001-device-mapper-and-crypt-target.cfg
+++ b/meta-c444-jas/recipes-kernel/linux/linux-imx/0001-device-mapper-and-crypt-target.cfg
@@ -1,6 +1,6 @@
 
-# Enable DM-Crypt and its dependencies
-CONFIG_DM_DEBUG=y
+# Enable DM-Crypt and its dependencies by Yocto
+CONFIG_BLK_DEV_DM=y
 CONFIG_DM_BUFIO=y
 # CONFIG_DM_DEBUG_BLOCK_MANAGER_LOCKING is not set
 CONFIG_DM_CRYPT=y
@@ -9,3 +9,9 @@ CONFIG_DM_VERITY=y
 # CONFIG_DM_VERITY_VERIFY_ROOTHASH_SIG is not set
 # CONFIG_DM_VERITY_FEC is not set
 CONFIG_DM_INTEGRITY=y
+CONFIG_PNFS_BLOCK=y
+CONFIG_XOR_BLOCKS=y
+CONFIG_ASYNC_CORE=y
+CONFIG_ASYNC_XOR=y
+CONFIG_CRYPTO_CBC=y
+CONFIG_CRYPTO_ESSIV=y
