Added HAB features
Signed-off-by: danie007 <danilselvan@gmail.com>

--- a/meta-c444-jas/conf/layer.conf
+++ b/meta-c444-jas/conf/layer.conf
@@ -24,3 +24,5 @@ IMAGE_INSTALL += "sys-setup"
 
 LAYERDEPENDS_meta-c444-jas = "core"
 LAYERSERIES_COMPAT_meta-c444-jas = "zeus"
+
+# MACHINE_FEATURES_append_imx8mq-itx-p-c444 = " optee "
