Renamed layer as meta-essa
The ESSA layer was previously named as "meta-c444-bgn" and is changed to
"meta-essa-c444" to align with the BGN's naming convention and Yocto
(meta- represents a yocto layer).

Signed-off-by: danie007 <danilselvan@gmail.com>

--- a/meta-essa-c444/conf/layer.conf
+++ b/meta-essa-c444/conf/layer.conf
@@ -5,11 +5,11 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
             ${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "meta-c444-bgn"
-BBFILE_PATTERN_meta-c444-bgn = "^${LAYERDIR}/"
+BBFILE_COLLECTIONS += "meta-essa-c444"
+BBFILE_PATTERN_meta-essa-c444 = "^${LAYERDIR}/"
 
 # This needs to be higher priority than meta-mender-c444
-BBFILE_PRIORITY_meta-c444-bgn = "13"
+BBFILE_PRIORITY_meta-essa-c444 = "13"
 
 # Install mke2fs for creating ext4 filesystems
 IMAGE_INSTALL += "e2fsprogs-mke2fs"
@@ -22,5 +22,5 @@ IMAGE_INSTALL += "cryptsetup"
 # Adding init script for cryptsetup
 IMAGE_INSTALL += "sys-setup"
 
-LAYERDEPENDS_meta-c444-bgn = "core"
-LAYERSERIES_COMPAT_meta-c444-bgn = "zeus"
+LAYERDEPENDS_meta-essa-c444 = "core"
+LAYERSERIES_COMPAT_meta-essa-c444 = "zeus"
