Changed repo name to meta-bgn-essa
Signed-off-by: danie007 <danilselvan@gmail.com>

--- a/meta-essa-c444/conf/layer.conf
+++ b/meta-essa-c444/conf/layer.conf
@@ -8,7 +8,7 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "meta-essa-c444"
 BBFILE_PATTERN_meta-essa-c444 = "^${LAYERDIR}/"
 
-# This needs to be higher priority than meta-mender-c444
+# This needs to be higher priority than meta-bgn-essa
 BBFILE_PRIORITY_meta-essa-c444 = "13"
 
 # Install mke2fs for creating ext4 filesystems
