--- a/meta-mender-c444/conf/layer.conf
+++ b/meta-mender-c444/conf/layer.conf
@@ -1,3 +1,11 @@
+# Copyright (c) 2021 BG Networks, Inc.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+
 # We have a conf and classes directory, add to BBPATH
 BBPATH .= ":${LAYERDIR}"
 
