Updated kernel revision to include CAAM-TK
DM-Crypt is using CAAM black key as master key and accelerated by CAAM
drivers

Signed-off-by: danie007 <danilselvan@gmail.com>

--- a/meta-essa-c444/recipes-kernel/linux/linux-imx/0003-cryptographic-API-functions.cfg
+++ b/meta-essa-c444/recipes-kernel/linux/linux-imx/0003-cryptographic-API-functions.cfg
@@ -6,3 +6,4 @@ CONFIG_CRYPTO_XTS=y
 CONFIG_CRYPTO_USER_API=y
 CONFIG_CRYPTO_USER_API_HASH=y
 CONFIG_CRYPTO_USER_API_SKCIPHER=y
+CONFIG_CRYPTO_USER_API_AEAD=y
