--- a/meta-essa-c444/recipes-kernel/linux/linux-imx/0001-device-mapper-and-crypt-target.cfg
+++ b/meta-essa-c444/recipes-kernel/linux/linux-imx/0001-device-mapper-and-crypt-target.cfg
@@ -2,13 +2,11 @@
 # Enable DM-Crypt and its dependencies by Yocto
 CONFIG_BLK_DEV_DM=y
 CONFIG_DM_BUFIO=y
-# CONFIG_DM_DEBUG_BLOCK_MANAGER_LOCKING is not set
 CONFIG_DM_CRYPT=y
-# CONFIG_DM_INIT is not set
+CONFIG_DM_MULTIPATH=y
 CONFIG_DM_VERITY=y
-# CONFIG_DM_VERITY_VERIFY_ROOTHASH_SIG is not set
-# CONFIG_DM_VERITY_FEC is not set
 CONFIG_DM_INTEGRITY=y
+
 CONFIG_PNFS_BLOCK=y
 CONFIG_XOR_BLOCKS=y
 CONFIG_ASYNC_CORE=y
