Added caam-keygen in layer.conf
Signed-off-by: danie007 <danilselvan@gmail.com>

--- a/meta-essa-c444/conf/layer.conf
+++ b/meta-essa-c444/conf/layer.conf
@@ -19,16 +19,20 @@ BBFILE_PATTERN_meta-essa-c444 = "^${LAYERDIR}/"
 # This needs to be higher priority than meta-mender-c444
 BBFILE_PRIORITY_meta-essa-c444 = "13"
 
-# Install mke2fs for creating ext4 filesystems
-IMAGE_INSTALL += "e2fsprogs-mke2fs"
 # userspace packages for dm-crypt
-IMAGE_INSTALL += "libgcc"
-IMAGE_INSTALL += "udev"
-IMAGE_INSTALL += "lvm2"
-IMAGE_INSTALL += "cryptodev-module"
-IMAGE_INSTALL += "cryptsetup"
+# Don't use += (creates weird issues) and use _append =
+IMAGE_INSTALL_append = " libgcc"
+IMAGE_INSTALL_append = " udev"
+IMAGE_INSTALL_append = " lvm2"
+IMAGE_INSTALL_append = " e2fsprogs-mke2fs"
+IMAGE_INSTALL_append = " coreutils"
+IMAGE_INSTALL_append = " keyutils"
+IMAGE_INSTALL_append = " util-linux"
+IMAGE_INSTALL_append = " cryptodev-module"
+IMAGE_INSTALL_append = " cryptsetup"
 # Adding init script for cryptsetup
-IMAGE_INSTALL += "sys-setup"
+IMAGE_INSTALL_append = " sys-setup"
+IMAGE_INSTALL_append = " caam-keygen"
 
 LAYERDEPENDS_meta-essa-c444 = "core"
 LAYERSERIES_COMPAT_meta-essa-c444 = "zeus"
